--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "cryptography>=46.0.3",
     "fastapi>=0.128.0",
     "pydantic>=2.12.5",
+    "pytest>=9.0.2",
     "sqlalchemy>=2.0.45",
     "uvicorn>=0.40.0",
 ]
