--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "cryptography>=46.0.3",
     "fastapi>=0.128.0",
+    "httpx>=0.28.1",
     "pydantic>=2.12.5",
     "pytest>=9.0.2",
     "sqlalchemy>=2.0.45",
